# notebooks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  howto_torchPYBIND11.md  requirements.txt
cmake/: FindATB.cmake  FindCANNToolkit.cmake  FindTorch_npu.cmake  ascend.cmake
comm_notebooks/: README.md  allreduce_.py  single_node.py  temp.py  test_multiprocess.py  utils.py
cppnotebooks/: CMakeLists.txt  reinterpret_cast  reinterpret_cast.cc  test_torch.cc  use_const.cc
cppnotebooks/torch_npu/: invoke_device.cpp
cudanotebooks/: CUDA overview.md  CUDAoverview.md  GPU overview.md  GPUoverview.md  check_specs.cc
cudanotebooks/dot_product/: dotproduct.cu
cudanotebooks/elementwise/: elementwise.cu  elementwise.py
cudanotebooks/include/: cuda_learning_utils.h
npunotebooks/: CMakeLists.txt  main.cpp
npunotebooks/include/: general.h
npunotebooks/learn_npu/: invoke_device.cpp
pynotebooks/: _accelerate.ipynb  accelerate.ipynb  basic_torch.ipynb  lmdeploy_engine.ipynb  qwen2vl.ipynb  qwen2vl_chat_template.jinja  test-qwen2.py  test_images.ipynb  test_openai_requests.ipynb
pynotebooks/agent/: 2rounds_vllm_return.py  qwen_official_exmple.py  tool_calls.ipynb
pynotebooks/layers/: config.py
pynotebooks/layers/attention/: README.md  base_attention.py
pynotebooks/layers/ffn/: README.md  mlp.py  moe.py  test-qwen3moe.py
pynotebooks/layers/linear-layer(MLP,MoE)/: intermediate_size.ipynb
pynotebooks/layers/position_embeddings/: README.md  basic_rope.py  rope.py
pynotebooks/qwen2.5vl/: lmdeploy_model.ipynb  qwen2.5vl-3b_config.json  qwen2.5vl-3b_preprocessor_config.json  qwen2.5vl.ipynb
pynotebooks/qwen2_5vl/: lmdeploy_engine.ipynb
pynotebooks/qwen3moe/: code.ipynb
